--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,7 @@
-<! DOCTYPE html>
-<html>
-    <head>
-        <meta charset= "utf -8">
-        <title>Blog</title>
-    </head>
-    <body>
-        { % block body %}{% endblock %}
-    </body>
-</html> 
+{% extends 'layout.html' %}
+
+{% block body %}
+
+HOME
+
+{% end block %}
