--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Flask App</title>
+    <title>Blog</title>
     <link rel= "stylesheet" href = "https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
 
 </head>
 <body>
-    {% block body %}{% endblock %}
+    {% include 'includes/_navbar.html'%}
+    <div class=" container">
+        {% block body %}{% endblock %}
+    </div>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" ></script>
+
 </body>
 </html>
