--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -9,10 +9,10 @@
             <a class="nav-link" href="/">Blog <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="/author">Author</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="/login">Log In</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
