--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
+    <div class = "jumbotron text- center ">
+        <h1>IS 211 FINAL</h1>
+        <p class="lead ">A Blog About the latest in world events.</p>
+    </div>
 
 HOME
 
