--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,9 @@
 {% block body %}
     <div class = "jumbotron text- center ">
         <h1>IS 211 FINAL</h1>
-        <p class="lead ">A Blog About the latest in world events.</p>
+        <p class="lead ">A Blog About the latest in world events!</p>
     </div>
 
-HOME
+ENJOY!!
 
 {% endblock %}
